Fix broken CSS for power-ups

--- a/src/app/power-up-container/power-up-container.component.scss
+++ b/src/app/power-up-container/power-up-container.component.scss
@@ -36,6 +36,11 @@
   height: 80%;
 }
 
+.image-container > img {
+  width: 50%;
+  height: 50%;
+}
+
 .text-container{
   display: flex;
   justify-content: center;
